--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -48,6 +48,7 @@ a.pic3 {
   min-height: 300px;
   margin: 10% 5px 20px;
   background-color: rgba(0, 0, 0, 0.5);
+  animation: slideIn 1.5s linear;
 
   ul.myWork {
     list-style: none;
