--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -8,10 +8,14 @@
   }
 }
 
+.smLinksB {
+  flex-direction: row;
+  position: fixed;
+  top: 20px;
+}
 @media screen and (min-width: 768px) {
   .navLinks {
-    background-color: rgba(0, 0, 0, 0.5);
-
+    background-color: rgba(55, 29, 74, 0.9);
 padding: 0.5em;
     display: flex;
     align-self: center;
