--- a/src/styles/intro.scss
+++ b/src/styles/intro.scss
@@ -1,9 +1,17 @@
+.introContainer {
+  background-color: #833db5;
+  opacity: 0.8;
+  width: 100%;
+  height: 100vh;
+}
+
 .introBox {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-top: 100px;
   animation: slideIn 1s linear;
+  z-index: 1;
 
   img {
     border-radius: 50%;
@@ -22,6 +30,13 @@
     border-bottom: $goldBorder;
     padding-bottom: 10px;
     color: white;
+  }
+
+  h2.hello {
+    font-size: 8em;
+    line-height: 0;
+    margin: 0 0 60px;
+    text-shadow: 2px 4px 2px rgb(55, 29, 74);
   }
 
   p {
