--- a/src/styles/pagebreaks.scss
+++ b/src/styles/pagebreaks.scss
@@ -1,6 +1,6 @@
 @media screen and (min-width: 481px) {
   div.introBox {
-    margin-top: 300px;
+    margin-top: 200px;
   }
 
   .pHeader {
@@ -9,6 +9,12 @@
 }
 
 @media screen and (min-width: 768px) {
+  h2.hello {
+    font-size: 12em;
+    line-height: 0;
+    margin: 0 0 60px;
+  }
+
   footer {
     display: none;
     background-color: transparent;
