--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -44,7 +44,6 @@ html {
   justify-content: center;
 }
 
-
 .smLinksB {
   position: fixed;
   top: 100px;
@@ -73,9 +72,16 @@ html {
     flex-direction: row;
     justify-content: space-around;
     position: fixed;
-    margin: 10px;
-    top: -17px;
-    height: 10px;
-    width: 100%;
+    margin: 0;
+    top: 1px;
+    height: 20px;
+    width: 150px;
+    padding: 10px;
+    background-color: rgba(55, 29, 74, 0.5);
+
+    li {
+      border: 1px solid black;
+      height: 100%;
+    }
   }
 }
