--- a/src/styles/pagebreaks.scss
+++ b/src/styles/pagebreaks.scss
@@ -1,6 +1,6 @@
 @media screen and (min-width: 481px) {
   div.introBox {
-    margin-top: 200px;
+    // margin-top: 100px;
   }
 
   .pHeader {
@@ -10,7 +10,7 @@
 
 @media screen and (min-width: 768px) {
   h2.hello {
-    font-size: 12em;
+    font-size: 16em;
     line-height: 0;
     margin: 0 0 60px;
   }
