--- a/src/styles/_utility.scss
+++ b/src/styles/_utility.scss
@@ -36,3 +36,10 @@ $box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
   80% { transform: translateY(10px); }
   100% { transform: translateY(0); }
 }
+
+@keyframes diagonal-slide {
+  0% { transform: translateY(0); }
+  60% { transform: translateY(50px); }
+  80% { transform: translateY(-50px); }
+  100% { transform: translateY(50px); }
+}
