--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -1,71 +1,139 @@
-
 .aboutMe {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: rgba(55, 29, 74, 0.7);
-  margin: 30px 0;
-  box-shadow: 2px 4px 2px rgb(55, 29, 74);
+  width: 100%;
+
   animation: slideIn 1s linear;
 
-  .deviconContainer {
-    display: flex;
-    justify-content: space-around;
-    padding: 15px;
-  }
+  @include reset-list;
+}
+
+.subAbout {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: rgba(55, 29, 74, 0.7);
+  // margin: 30px 0;
+  box-shadow: 2px 4px 2px rgb(55, 29, 74);
+  animation: slideIn 1s linear;
+  height: 200px;
+  width: 300px;
+  transform: rotate(-3deg);
+  padding: 5px;
+  z-index: 0;
 
   .bigger {
     font-weight: 600;
     font-size: 1.1em;
   }
 
-  .devicon {
-    font-size: 2em;
-  }
-
   p {
     margin: 5px;
     margin-left: 7px;
     font-size: 1.5em;
-    flex: 1;
     text-align: left;
     font-family: $heading-font-fam;
   }
+}
 
-  img {
-    display: block;
-    margin: 0 auto;
-    padding: 10px;
-  }
+.deviconContainer {
+  width: 100%;
+  height: auto;
+  flex-wrap: nowrap;
+  margin-bottom: 120px;
+}
+
+.devicon {
+  font-size: 2em;
+  margin: 2px;
+}
+
+
+.rotateR {
+  transform: rotate(3deg);
+}
+
+.about2 {
+  transform: rotate(-3deg);
+}
+
+.expand3 {
+  margin-bottom: 30px;
+}
+
+.border {
+  border: 3px dotted rgb(127, 236, 172);
+  padding: 5px;
+  // width: 50%
 }
 
 .mypics {
-  display: none;
+  align-self: center;
+  box-shadow: 2px 4px 2px rgb(55, 29, 74);
+  border: 3px dotted rgb(127, 236, 172);
+  width: 80%;
+  z-index: 1;
+  margin: 10px;
+  transition: width 1s;
+}
+
+.mypics:hover {
+  width: 85%;
 }
 
 @media screen and (min-width: 768px) {
   .aboutContainer {
+    margin-top: 100px;
+    margin-bottom: 100px;
+    width: 100%;
     display: flex;
-    flex-direction: column;
     justify-content: center;
   }
 
-  .mypics {
+  .deviconContainer {
+    width: 75px;
+    height: 75px;
+    border: 3px dotted rgb(127, 236, 172);
     display: flex;
-    align-self: center;
-    box-shadow: 2px 4px 2px rgb(55, 29, 74);
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 15px;
+  }
+
+  .devicon {
+    font-size: 2em;
+    margin: 2px;
   }
 
   .aboutMe {
-    flex-direction: column;
-    position: relative;
-    top: 10px;
-    height: 300px;
-    animation: slideIn 1s linear;
+    width: 100%;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    @include reset-list;
+
+    li {
+    margin: 20px;
+    }
 
     .subAbout {
       display: flex;
+    }
+
+    .expand1 {
+      width: 500px;
+      font-size: 1.3em;
+    }
+
+    .expand2 {
       width: 600px;
+      font-size: 1.3em;
+    }
+
+    .expand3 {
+      width: 500px;
+      font-size: 1.3em;
     }
 
     p {
