--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -15,9 +15,9 @@
   flex-direction: column;
   // flex: 1;
   width: 268px;
-  height: 175px;
+  // height: 175px;
   align-self: center;
-  background-color: rgba(0, 0, 0, 0.5);
+  // background-color: rgba(0, 0, 0, 0.5);
   padding: 10px;
   // margin: 10px;
   text-shadow: 2px 4px 2px rgb(55, 29, 74);
@@ -30,10 +30,15 @@
   .cardName {
     font-size: 2em;
     border-bottom: 1px solid $golden;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 5px;
   }
 
   .card {
     margin-top: 10px;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-bottom: 1px solid $golden;
+    padding: 7px;
 
     a:any-link {
       text-decoration: none;
@@ -43,11 +48,15 @@
 
   .smLinks {
     display: flex;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-bottom: 1px solid $golden;
+    padding: 5px;
 
     @include reset-list;
 
-    margin: 10px;
+    // margin: 10px;
     justify-content: space-around;
+
 
     a:link,
     a:visited,
