--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -29,13 +29,20 @@ html {
 
   font-family: $body-font-fam;
   font-size: $base-text-size;
+  background-color: #833db5;
   color: $golden;
-  background-color: #743d9b;
+
 }
 
 .App {
   display: flex;
   flex-direction: column;
+  background: rgba(127,236,172,1);
+background: -moz-linear-gradient(45deg, rgba(127,236,172,1) 0%, rgba(130,84,180,1) 39%, rgba(131,61,181,1) 45%);
+background: -webkit-gradient(left bottom, right top, color-stop(0%, rgba(127,236,172,1)), color-stop(39%, rgba(130,84,180,1)), color-stop(45%, rgba(131,61,181,1)));
+background: -webkit-linear-gradient(45deg, rgba(127,236,172,1) 0%, rgba(130,84,180,1) 39%, rgba(131,61,181,1) 45%);
+background: linear-gradient(45deg, rgba(127,236,172,1) 0%, rgba(130,84,180,1) 39%, rgba(131,61,181,1) 45%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7fecac', endColorstr='#833db5', GradientType=1 );
 }
 
 .mainContainer {
@@ -67,6 +74,12 @@ html {
   }
 }
 
+.workSamples {
+  background-color: #833db5;
+  padding: 50px;
+  animation: slideIn 1s linear;
+}
+
 .workSample {
   padding: 20px 0;
 }
@@ -74,10 +87,29 @@ html {
 .responsiveContainer img {
   max-width: 100%;
   height: auto;
+  border-bottom: 3px solid $golden;
+  box-shadow: 2px 4px 4px rgb(55, 29, 74);
+}
+
+hr {
+  border-width: 2px;
+  border-style: inset;
+  border-color: $golden;
 }
 
 .sampleText {
   max-width: 600px;
+
+  h2 {
+    background-color: rgba(0, 0, 0, 0.5);
+    border-bottom: 1px solid $golden;
+    padding: 7px;
+  }
+
+  p {
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 7px;
+  }
 }
 
 @media screen and (min-width: 900px) {
@@ -115,7 +147,6 @@ html {
     background-color: rgba(55, 29, 74, 0.5);
 
     li {
-      border: 1px solid black;
       height: 100%;
     }
   }
