--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,5 +1,6 @@
 footer {
   background-color: $golden;
+  border-radius: 0;
   width: 100%;
   position: fixed;
   bottom: 0;
@@ -19,5 +20,13 @@ footer {
     text-decoration: none;
     color: black;
     font-weight: 700;
+  }
+}
+
+@media screen and (min-width: 767px) {
+  footer {
+    display: none;
+    background-color: transparent;
+    max-width: 1400px;
   }
 }
