--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -1,6 +1,4 @@
 @import 'utility';
-@import 'matteFinish';
-@import 'pagebreaks';
 @import 'resume';
 @import 'about';
 @import 'work';
@@ -29,20 +27,14 @@ html {
 
   font-family: $body-font-fam;
   font-size: $base-text-size;
-  background-color: #833db5;
   color: $golden;
 
+  @include gradient;
 }
 
 .App {
-  display: flex;
-  flex-direction: column;
-  background: rgba(127,236,172,1);
-background: -moz-linear-gradient(45deg, rgba(127,236,172,1) 0%, rgba(130,84,180,1) 39%, rgba(131,61,181,1) 45%);
-background: -webkit-gradient(left bottom, right top, color-stop(0%, rgba(127,236,172,1)), color-stop(39%, rgba(130,84,180,1)), color-stop(45%, rgba(131,61,181,1)));
-background: -webkit-linear-gradient(45deg, rgba(127,236,172,1) 0%, rgba(130,84,180,1) 39%, rgba(131,61,181,1) 45%);
-background: linear-gradient(45deg, rgba(127,236,172,1) 0%, rgba(130,84,180,1) 39%, rgba(131,61,181,1) 45%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7fecac', endColorstr='#833db5', GradientType=1 );
+  @include flex-column;
+  @include gradient;
 }
 
 .mainContainer {
@@ -77,7 +69,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7fecac', end
 .workSamples {
   background-color: #833db5;
   padding: 50px;
-  animation: slideIn 1s linear;
+  animation: $pageAnimation;
 }
 
 .workSample {
@@ -88,7 +80,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7fecac', end
   max-width: 100%;
   height: auto;
   border-bottom: 3px solid $golden;
-  box-shadow: 2px 4px 4px rgb(55, 29, 74);
+  box-shadow: $purpleboxShadow;
 }
 
 hr {
