--- a/src/styles/_utility.scss
+++ b/src/styles/_utility.scss
@@ -1,11 +1,21 @@
 
 $golden: #e8b866;
 $goldBorder: 5px solid $golden;
+$greenDotBorder: 3px dotted rgb(127, 236, 172);
+$darkPurple: rgb(55, 29, 74);
+$purpleboxShadow: 2px 4px 4px rgb(55, 29, 74);
 $heading-font-fam: 'Josefin Sans', sans-serif;
 $body-font-fam: 'Merriweather', serif;
 $base-text-size: 14px;
 $base-font-weight: 400;
 $box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+$pageAnimation: slideIn 1s linear;
+
+@mixin flex-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 
 * {
   border-radius: 3px;
@@ -28,6 +38,11 @@ $box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
   #root > div {
     min-height: 100vh;
   }
+}
+
+@mixin gradient {
+  background: rgba(127, 236, 172, 1);
+  background: linear-gradient(45deg, rgba(127, 236, 172, 1) 0%, rgba(130, 84, 180, 1) 39%, rgba(131, 61, 181, 1) 45%);
 }
 
 @keyframes slideIn {
