--- a/src/styles/_utility.scss
+++ b/src/styles/_utility.scss
@@ -1,5 +1,5 @@
 
-$golden: #e8b866;
+$golden: #feda6a;
 $goldBorder: 5px solid $golden;
 $greenDotBorder: 3px dotted rgb(127, 236, 172);
 $darkPurple: rgb(55, 29, 74);
@@ -9,7 +9,7 @@ $body-font-fam: 'Merriweather', serif;
 $base-text-size: 14px;
 $base-font-weight: 400;
 $box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-$pageAnimation: slideIn 1s linear;
+$pageAnimation: fadeIn 1s linear;
 
 @mixin flex-column {
   display: flex;
@@ -40,10 +40,7 @@ $pageAnimation: slideIn 1s linear;
   }
 }
 
-@mixin gradient {
-  background: rgba(127, 236, 172, 1);
-  background: linear-gradient(45deg, rgba(127, 236, 172, 1) 0%, rgba(130, 84, 180, 1) 39%, rgba(131, 61, 181, 1) 45%);
-}
+
 
 @keyframes fadeIn {
   0% {
