--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -23,7 +23,7 @@
   // background-color: rgba(0, 0, 0, 0.5);
   padding: 10px;
   // margin: 10px;
-  text-shadow: 2px 4px 2px rgb(55, 29, 74);
+  text-shadow: 2px 4px 2px rgb(29, 30, 34);
   // animation: slideIn 1s linear;
 
   h2 {
@@ -32,15 +32,15 @@
 
   .cardName {
     font-size: 2em;
-    border-bottom: 1px solid $golden;
-    background-color: rgba(0, 0, 0, 0.5);
+    // border-bottom: 1px solid $golden;
+    // background-color: rgba(0, 0, 0, 0.5);
     padding: 5px;
   }
 
   .card {
     margin-top: 10px;
-    background-color: rgba(0, 0, 0, 0.5);
-    border-bottom: 1px solid $golden;
+    // background-color: rgba(0, 0, 0, 0.5);
+    // border-bottom: 1px solid $golden;
     padding: 7px;
 
     a:any-link {
@@ -51,8 +51,8 @@
 
   .smLinks {
     display: flex;
-    background-color: rgba(0, 0, 0, 0.5);
-    border-bottom: 1px solid $golden;
+    // background-color: rgba(0, 0, 0, 0.5);
+    // border-bottom: 1px solid $golden;
     padding: 5px;
 
     @include reset-list;
@@ -77,6 +77,6 @@
     width: 300px;
     height: 450px;
     align-self: center;
-    box-shadow: 2px 4px 4px rgb(55, 29, 74);
+    box-shadow: 2px 4px 4px rgb(29, 30, 34);
   }
 }
