--- a/src/styles/intro.scss
+++ b/src/styles/intro.scss
@@ -12,7 +12,7 @@ h2.hello {
   line-height: 0;
   margin: 200px 0 60px;
   text-align: center;
-  text-shadow: 2px 4px 2px rgb(55, 29, 74);
+  text-shadow: 2px 4px 2px rgb(29,30,34);
   animation-name: fadeIn;
   animation-duration: 3s;
   animation-iteration-count: 1;
