--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -76,6 +76,8 @@ body {
 .workSamples {
   background-color: #666;
   padding: 50px;
+  width: 100%;
+  height: 100vh;
   animation: $pageAnimation;
 }
 
