styling hard coded component

--- a/src/styles/_utility.scss
+++ b/src/styles/_utility.scss
@@ -18,7 +18,7 @@ $pageAnimation: fadeIn 1s linear;
 }
 
 * {
-  border-radius: 3px;
+  // border-radius: 3px;
 }
 // Remove the browsers built-in styling for lists elements.
 @mixin reset-list {
