--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -16,8 +16,11 @@ h5 {
   font-family: $heading-font-fam;
   color: $golden;
   z-index: 99;
+  margin: 0 10px;
 }
-
+h4 {
+  font-weight: 200;
+}
 a:any-link {
   text-decoration: none;
 }
@@ -28,8 +31,6 @@ html {
   font-family: $body-font-fam;
   font-size: $base-text-size;
   color: $golden;
-
-  // @include gradient;
 }
 
 body {
@@ -51,13 +52,17 @@ body {
 }
 
 .dark-gray-bg {
+  display: flex;
+  flex: 1;
+  justify-content: center;
   background-color: #1d1e22;
   width: 100vw;
 }
 
 .light-gray-bg {
+  align-self: center;
   background-color: #393f4d;
-  width: 80vw;
+  max-width: 350px;
   padding: 20px;
 }
 
@@ -69,14 +74,14 @@ body {
   .item-details {
     background-color: #feda6a;
     width: 100%;
-    // padding: 10px;
-    margin: -5px;
+    margin: -5px 0;
+    padding: 10px 0;
   }
 
   h3,
   h4 {
     color: #393f4d;
-    margin: 0;
+    font-size: 1.2em;
   }
 
   img {
@@ -88,10 +93,6 @@ body {
     color: #d4d4dc;
     width: 100%;
     padding: 10px 0;
-
-    p {
-      margin: 10px;
-    }
   }
 }
 
@@ -143,15 +144,19 @@ a {
   align-self: center;
 }
 
-// p {
-//   background-color: rgba(0, 0, 0, 0.5);
-//   padding: 7px;
-//   font-family: $heading-font-fam;
-//   margin: 5px;
-//   margin-left: 7px;
-//   font-size: 1.5em;
-//   text-align: left;
-// }
+@media screen and (min-width: 600px) {
+  .item-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 250px 100px;
+  }
+
+  img {
+    grid-colum: 1 / span 6;
+    grid-row: 1;
+
+  }
+}
 
 
 @media screen and (max-width: 749px) {
