--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -1,43 +1,19 @@
+
 .aboutMe {
-  @include flex-column;
-  @include reset-list;
-
-  width: 100%;
-  animation-name: fadeIn;
-  animation-duration: 3s;
-  animation-iteration-count: 1;
+  display: grid;
+  grid-template-columns: (1fr 1fr 1fr);
+}
+.bigger {
+  font-weight: 600;
+  font-size: 1.1em;
 }
 
-.subAbout {
-  @include flex-column;
-
-  background-color: rgba(57, 63, 77, 0.9);
-  box-shadow: $purpleboxShadow;
-  height: 125px;
-  width: 300px;
-  transform: rotate(-2deg);
-  padding: 5px;
-  z-index: 0;
-
-  .bigger {
-    font-weight: 600;
-    font-size: 1.1em;
-  }
-
-  p {
-    margin: 5px;
-    margin-left: 7px;
-    font-size: 1.2em;
-    text-align: left;
-    font-family: $heading-font-fam;
-  }
-}
-
-.deviconContainer {
-  width: 100%;
-  height: auto;
-  flex-wrap: nowrap;
-  margin-bottom: 120px;
+p {
+  margin: 5px;
+  margin-left: 7px;
+  font-size: 1.2em;
+  text-align: left;
+  font-family: $heading-font-fam;
 }
 
 .devicon {
@@ -45,39 +21,9 @@
   margin: 2px;
 }
 
-.rotateR {
-  transform: rotate(2deg);
-}
-
-.about2 {
-  transform: rotate(-3deg);
-}
-
-.expand3 {
-  margin-bottom: 30px;
-}
-
-.mypics {
-  align-self: center;
-  box-shadow: $purpleboxShadow;
-  border: $greenDotBorder;
-  width: 80%;
-  z-index: 1;
-  margin: 10px;
-  transition: width 1s;
-}
-
-.mypics:hover {
-  width: 85%;
-}
-
 @media screen and (min-width: 768px) {
   .aboutContainer {
-    margin-top: 100px;
-    margin-bottom: 100px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
+    display: grid;
   }
 
   .deviconContainer {
@@ -95,40 +41,9 @@
     margin: 2px;
   }
 
-  .aboutMe {
-    width: 100%;
-    flex-direction: row;
-    flex-wrap: wrap;
-
-    @include reset-list;
-
-    li {
-      margin: 20px;
-    }
-
-    .subAbout {
-      display: flex;
-    }
-
-    .expand1 {
-      width: 500px;
-      font-size: 1.3em;
-    }
-
-    .expand2 {
-      width: 600px;
-      font-size: 1.3em;
-    }
-
-    .expand3 {
-      width: 500px;
-      font-size: 1.3em;
-    }
-
-    p {
-      text-align: left;
-      font-size: 1.3em;
-      align-self: flex-end;
-    }
+  p {
+    text-align: left;
+    font-size: 1.3em;
+    align-self: flex-end;
   }
 }
