--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -36,9 +36,9 @@ html {
 body {
   margin: 0;
   background-image: url('../images/officeBG.jpg');
-  background-size: cover;
+  background-size: cover cover;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: fixed;
 }
 
 .App {
@@ -62,49 +62,56 @@ body {
 .light-gray-bg {
   align-self: center;
   background-color: #393f4d;
-  padding: 20px;
+  padding: 50px;
 }
 
 .item-container {
   display: grid;
   grid-template-areas:
-    "img img title"
-    "img img desc";
-  color: #393f4d;
+    "img title title"
+    "img desc desc";
   margin: 25px;
+  box-shadow: 10px 10px 10px 3px #333;
+}
 
-  .item-img {
-    grid-area: img;
-  }
+.item-img {
+  grid-area: img;
+}
 
-  .item-title {
-    grid-area: title;
-    background-color: #feda6a;
-    margin: -5px 0;
-    padding: 10px 0;
-    display: grid;
-    align-items: center;
-    align-content: center;
-  }
+.item-img img {
+  max-width: 400px;
+}
 
-  h3 {
-    color: #393f4d;
-    font-size: 4em;
-  }
+.item-title {
+  grid-area: title;
+  background-color: #feda6a;
+  padding: 10px 0;
+  display: grid;
+  align-items: center;
+  align-content: center;
+}
 
-  h4 {
-    color: #393f4d;
-    font-size: 2em;
-  }
+.item-title a {
+  color: black;
+}
 
-  .item-desc {
-    grid-area: desc;
-    background-color: #1d1e22;
-    color: #d4d4dc;
-    padding: 10px 0;
-    display: grid;
-    align-items: center;
-  }
+h3 {
+  color: #393f4d;
+  font-size: 2em;
+}
+
+h4 {
+  color: #393f4d;
+  font-size: 1.2em;
+}
+
+.item-desc {
+  grid-area: desc;
+  background-color: #1d1e22;
+  color: #d4d4dc;
+  padding: 10px 0;
+  display: grid;
+  align-items: center;
 }
 
 hr {
@@ -131,21 +138,19 @@ a {
   align-self: center;
 }
 
+@media (max-width: 700px) {
 
-@media screen and (max-width: 749px) {
-  .smLinksB {
-    flex-direction: row;
-    justify-content: space-around;
-    position: fixed;
-    margin: 0;
-    top: 1px;
-    height: 20px;
-    width: 150px;
+  .light-gray-bg {
     padding: 10px;
-    background-color: rgba(29, 30, 34, 0.5);
+  }
+  .item-container {
+    grid-template-areas:
+      "img img"
+      "title title"
+      "desc desc";
+  }
 
-    li {
-      height: 100%;
-    }
+  .item-img img {
+    max-width: 100%;
   }
 }
