--- a/src/styles/intro.scss
+++ b/src/styles/intro.scss
@@ -1,18 +1,15 @@
 .introContainer {
   display: flex;
   flex-direction: column;
-  // background-color: #833db5;
-  opacity: 0.8;
   width: 100%;
   height: 100vh;
 }
 
 h2.hello {
-  font-size: 8em;
-  line-height: 0;
-  margin: 200px 0 60px;
+  font-size: 5em;
+  line-height: 2em;
   text-align: center;
-  text-shadow: 2px 4px 2px rgb(29,30,34);
+  text-shadow: 2px 4px 2px rgb(29, 30, 34);
   animation-name: fadeIn;
   animation-duration: 3s;
   animation-iteration-count: 1;
@@ -29,7 +26,7 @@ h2.hello {
   img {
     border-radius: 50%;
     border: $goldBorder;
-    max-width: 150px;
+    max-width: 125px;
   }
 
   .introText {
@@ -45,16 +42,8 @@ h2.hello {
 
   p {
     text-align: center;
-    margin: 0;
+    margin: 10px;
     color: white;
     font-size: 1.3em;
   }
-}
-
-figure {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: none;
-  box-sizing: border-box;
 }
