--- a/src/styles/resume.scss
+++ b/src/styles/resume.scss
@@ -1,14 +1,19 @@
 .resume {
-  width: 850px;
+  max-width: 850px;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-  margin-top: 150px;
+  margin: 30px;
   background-color: white;
   animation-name: fadeIn;
   animation-duration: 3s;
   animation-iteration-count: 1;
 
+  a {
+    color: rgb(127, 236, 172);
+    font-style: italic;
+
+  }
   li,
   p,
   span {
