--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -1,10 +1,8 @@
 @import 'utility';
 @import 'resume';
-@import 'about';
 @import 'nav';
 @import 'intro';
 @import 'contact';
-@import 'footer';
 @import url('https://fonts.googleapis.com/css?family=Merriweather');
 @import url('https://fonts.googleapis.com/css?family=Josefin+Sans:100,300,600');
 
@@ -18,9 +16,11 @@ h5 {
   z-index: 99;
   margin: 0 10px;
 }
+
 h4 {
   font-weight: 200;
 }
+
 a:any-link {
   text-decoration: none;
 }
@@ -38,7 +38,7 @@ body {
   background-image: url('../images/officeBG.jpg');
   background-size: cover cover;
   background-repeat: no-repeat;
-  background-position: fixed;
+  background-attachment: fixed;
 }
 
 .App {
@@ -87,17 +87,28 @@ body {
   background-color: #feda6a;
   padding: 10px 0;
   display: grid;
+  grid-template-columns: 1fr auto;
   align-items: center;
   align-content: center;
 }
 
-.item-title a {
-  color: black;
+.item-title i {
+  color: #393f4d;
+}
+
+.item-icons {
+  margin: 10px;
+  display: grid;
+  grid-template-columns: 40px 40px;
+
+  a {
+    text-align: left;
+  }
 }
 
 h3 {
   color: #393f4d;
-  font-size: 2em;
+  font-size: 1.2em;
 }
 
 h4 {
@@ -112,6 +123,10 @@ h4 {
   padding: 10px 0;
   display: grid;
   align-items: center;
+
+  p {
+    font-weight: lighter;
+  }
 }
 
 hr {
