--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -4,6 +4,8 @@
   animation-name: fadeIn;
   animation-duration: 3s;
   animation-iteration-count: 1;
+  position: fixed;
+  bottom: 25%;
 }
 
 .me22017 {
@@ -16,15 +18,12 @@
 .contact {
   display: flex;
   flex-direction: column;
-  // flex: 1;
   width: 268px;
-  // height: 175px;
   align-self: center;
   // background-color: rgba(0, 0, 0, 0.5);
   padding: 10px;
   // margin: 10px;
   text-shadow: 2px 4px 2px rgb(29, 30, 34);
-  // animation: slideIn 1s linear;
 
   h2 {
     margin: 0;
@@ -32,15 +31,13 @@
 
   .cardName {
     font-size: 2em;
-    // border-bottom: 1px solid $golden;
-    // background-color: rgba(0, 0, 0, 0.5);
     padding: 5px;
   }
 
   .card {
     margin-top: 10px;
-    // background-color: rgba(0, 0, 0, 0.5);
-    // border-bottom: 1px solid $golden;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-bottom: 1px solid $golden;
     padding: 7px;
 
     a:any-link {
