--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -10,20 +10,16 @@
 
 .me22017 {
   width: 100%;
-  max-width: 268px;
+  max-width: 325px;
   align-self: center;
 }
 
 .contact {
   display: flex;
   flex-direction: column;
-  width: 268px;
+  width: 325px;
   align-self: center;
   background-color: #393f4d;
-
-  h2 {
-    margin: 0;
-  }
 
   .cardName {
     font-size: 2em;
@@ -32,14 +28,9 @@
 
   .card {
     margin-top: 10px;
-    // background-color: rgba(0, 0, 0, 0.5);
     border-bottom: 1px solid $golden;
     padding: 7px;
-
-    a:any-link {
-      text-decoration: none;
-      color: $golden;
-    }
+    font-size: 1.2em;
   }
 
   .smLinks {
@@ -66,11 +57,11 @@
   }
 
   .me22017 {
-    max-width: 200px;
+    max-width: 225px;
     box-shadow: 2px 4px 4px rgb(29, 30, 34);
   }
 
   .contact {
-    height: 200px;
+    height: 225px;
   }
 }
