--- a/src/styles/intro.scss
+++ b/src/styles/intro.scss
@@ -1,6 +1,6 @@
 .introContainer {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-auto-rows: 1fr 2fr 1fr;
   width: 100%;
   height: 100vh;
 }
@@ -22,11 +22,13 @@ h2.hello {
   animation-name: fadeIn;
   animation-duration: 3s;
   animation-iteration-count: 1;
+  grid-row: 2;
 
   img {
     border-radius: 50%;
     border: $goldBorder;
     max-width: 125px;
+    margin: 15px;
   }
 
   .introText {
@@ -42,20 +44,23 @@ h2.hello {
 
   p {
     text-align: center;
-    margin: 10px;
+    margin: 15px;
     color: white;
-    font-size: 1.3em;
+    font-size: 1.4em;
   }
 
   .deviconContainer {
     display: flex;
     width: 200px;
     justify-content: space-around;
-    margin: 10px;
+    margin: 15px;
   }
 
   i.devicon {
     font-size: 1.8em;
-   -moz-font-size: 1.8px;
   }
+}
+
+@media screen and (min-width: 768px) {
+
 }
