--- a/src/styles/resume.scss
+++ b/src/styles/resume.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-  margin: 30px;
+  margin: 10px;
   background-color: white;
 
   @include animation;
@@ -18,6 +18,7 @@
   span {
     color: black;
   }
+
   h2,
   h3,
   h4,
@@ -136,9 +137,8 @@ ul.bullets {
   }
 
   .resume {
-    width: 400px;
-    margin-top: 30px;
-    margin-bottom: 50px;
+    // width: 350px;
+    margin: 0;
   }
 
   .experience h3.exp {
